--- a/projects/billing/templates/billing/header.html
+++ b/projects/billing/templates/billing/header.html
@@ -29,5 +29,16 @@
     </div>
 </header>
 
-{% block content %}  {% endblock %}
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="message {{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
 
+{% block content %}  {% endblock %}
+</body>
+</html>
