--- a/app_jf/app_jf/static/styles.css
+++ b/app_jf/app_jf/static/styles.css
@@ -1,1 +1,13 @@
-@import 'forms.css'
+@import 'login.css';
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #f3f4f6;
+  color: #374151;
+  margin: 0;
+  padding: 0;
+}
