--- a/app_jf/app_jf/templates/base.html
+++ b/app_jf/app_jf/templates/base.html
@@ -1,13 +1,14 @@
 {% load static %}
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Job Finder{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'login.css' %}">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
     {% block content %}{% endblock %}
 </body>
 </html>
-
