--- a/app_jf/user_manager/templates/user_manager/register_agency.html
+++ b/app_jf/user_manager/templates/user_manager/register_agency.html
@@ -1,29 +1,49 @@
+{% extends "base.html" %}
+{% load static %}
+{% load widget_tweaks %}
+
 {% block content %}
-<h2>Informations sur l'entreprise</h2>
-{% if messages %}
-{% for message in messages %}
-<div>{{ message }}</div>
-{% endfor %}
-{% endif %}
-<form method="post" novalidate>
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    <div>
-        {{ form.name.label_tag }}<br>
-        {{ form.name }}
-        {{ form.name.errors }}
+<link rel="stylesheet" href="{% static 'register.css' %}">
+<div class="register-form-outer-container">
+    <div class="register-form-card">
+        <h2 class="register-form-title">Créer votre profil entreprise</h2>
+
+        {% if messages %}
+        {% for message in messages %}
+        <div class="register-form-message alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+        {% endif %}
+
+        <form method="post" novalidate>
+            {% csrf_token %}
+            {{ form.non_field_errors }}
+
+            <div class="register-form-group">
+                {{ form.name.label_tag }}
+                {{ form.name|add_class:"register-form-input" }}
+                {% if form.name.errors %}
+                <div class="register-form-error">{{ form.name.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div class="register-form-group">
+                {{ form.address.label_tag }}
+                {{ form.address|add_class:"register-form-input" }}
+                {% if form.address.errors %}
+                <div class="register-form-error">{{ form.address.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div class="register-form-group">
+                {{ form.siret.label_tag }}
+                {{ form.siret|add_class:"register-form-input" }}
+                {% if form.siret.errors %}
+                <div class="register-form-error">{{ form.siret.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <button type="submit" class="register-form-submit-btn">Finaliser mon profil entreprise</button>
+        </form>
     </div>
-    <div>
-        {{ form.address.label_tag }}<br>
-        {{ form.address }}
-        {{ form.address.errors }}
-    </div>
-    <div>
-        {{ form.siret.label_tag }}<br>
-        {{ form.siret }}
-        {{ form.siret.errors }}
-    </div>
-    <button type="submit">Valider</button>
-    <button type="submit" name="skip" value="1">Passer</button>
-</form>
+</div>
 {% endblock %}
