--- a/app_jf/user_manager/templates/user_manager/register.html
+++ b/app_jf/user_manager/templates/user_manager/register.html
@@ -77,6 +77,10 @@
 
             <button type="submit" class="register-form-submit-btn">S'inscrire</button>
         </form>
+
+        <div class="register-form-login-link">
+            Vous avez déjà un compte ? <a href="{% url 'login' %}">Connectez-vous</a>
+        </div>
     </div>
 </div>
 {% endblock %}
