--- a/app_jf/user_manager/templates/user_manager/login.html
+++ b/app_jf/user_manager/templates/user_manager/login.html
@@ -3,6 +3,7 @@
 {% load widget_tweaks %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'register.css' %}">
 <div class="login-form-outer-container">
     <div class="login-form-card">
         <h2 class="login-form-title">Connexion</h2>
@@ -30,6 +31,10 @@
             </div>
             <button type="submit" class="login-form-submit-btn">Se connecter</button>
         </form>
+
+        <div class="login-form-register-link">
+            Vous n'avez pas encore de compte ? <a href="{% url 'register' %}">Inscrivez-vous</a>
+        </div>
     </div>
 </div>
 {% endblock %}
