--- a/app_jf/job_finder/templates/job_finder/dashboard.html
+++ b/app_jf/job_finder/templates/job_finder/dashboard.html
@@ -1,5 +1,14 @@
-{% block content %}
-  <h2>Bienvenue, {{ user.username }} {{ user.last_name }} !</h2>
-  <p>Vous êtes connecté en tant que : {{ group }}</p>
-{% endblock %}
+{% extends "base.html" %}
+{% load static %}
+{% load widget_tweaks %}
 
+{% block title %}Dashboard - JobFinder{% endblock %}
+
+{% block content %}
+{% include "job_finder/header.html" %}
+<link rel="stylesheet" href="{% static 'header.css' %}">
+<div class="dashboard-container">
+    <h2>Bienvenue, {{ user.username }} {{ user.last_name }} !</h2>
+    <p>Vous êtes connecté en tant que : {{ group }}</p>
+</div>
+{% endblock %}
